--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Deploy Infrastructure
 on:
   push:
     branches:
-      - test
+      - main
 
 jobs:
   tf_fmt:
@@ -21,30 +21,19 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-east-1
 
-    - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v2
+    - name: Set up Hugo
+      uses: peaceiris/actions-hugo@v2
       with:
-        terraform_version: 1.3.7
+        hugo-version: 'latest'  # Replace with the desired Hugo version
 
-    - name: Terraform init, plan and apply
-      run: |
-        echo `pwd`
-        echo "tfpath ${{ github.event.inputs.tfpath }}"
-        echo "** Running Terraform Init**"
-        terraform init
-
-        echo "** Running Terraform Validate**"
-        terraform validate
-
-        echo "** Running Terraform Apply**"
-        terraform apply -auto-approve
-      working-directory: 'IaC_Terraform'
+    - name: Build Hugo Site
+      run: hugo --minify
 
     - name: Sync S3
       uses: jakejarvis/s3-sync-action@master
       env:
-        SOURCE_DIR: './frontend/source'
+        SOURCE_DIR: './public'
         AWS_REGION: 'us-east-1'
-        AWS_S3_BUCKET: 'resume.madebyfrankely.com'
+        AWS_S3_BUCKET: 'madebyfrankely.com'
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
