--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,5 +39,5 @@ jobs:
 
     - name: Invalidate CDN Cache
       run: |
-        aws cloudfront create-invalidation --distribution-id YOUR_DISTRIBUTION_ID --paths '/*'
+        aws cloudfront create-invalidation --distribution-id E1TKR86IMOYZQF --paths '/*'
 
